# authentication

./: .gitignore  Cargo.toml  packaged.yaml  samconfig.toml  template.yaml
.github/workflows/: ci-cd.yml
src/: db.rs  main.rs
src/config/: argon2config.rs  config.rs  credentials.rs  db.rs  mail.rs  mod.rs
src/domain/: mod.rs
src/domain/db/: mod.rs  user.rs  verification.rs
src/domain/services/: mail.html  mail.rs  mod.rs  user.rs  verification.rs
src/domain/types/: email_address.rs  error.rs  id.rs  mod.rs  number.rs  user.rs  value.rs  verification.rs
src/domain/types/error/: mod.rs
src/server/: mod.rs  user.rs  verification.rs
