[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aws-sdk-config = { version = "1.53.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.55.0"
bson = "2.13.0"
jwt = "0.16.0"
lambda_http = "0.13.0"
lettre = "0.11.11"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
openssl = { version = "0.10.35", features = ["vendored"] }
