[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
bson = "2.13.0"
jwt = "0.16.0"
lettre = "0.11.11"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
static_init = "1.0.3"
tokio = { version = "1.42.0", features = ["full"] }
